home overflow x fix

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -324,13 +324,11 @@ header {
             justify-content: center;
 
             #join-circle-shape {
-                -webkit-mask: url(/assets/svg/circle.svg) no-repeat center / cover;
-                mask: url(/assets/svg/circle.svg) no-repeat center / cover;
                 opacity: 0;
     
                 position: absolute;
                 aspect-ratio: 1;
-                height: min(48rem, 150vw);
+                height: min(48rem, 100vw);
                 
                 z-index: -1;
             }
